v1.0 / Tue Nov 05 2013 21:59:33 +0100 / 23374f0baa23eb1c8f3e91696a053f55fbff1879
================================================================================

* Accidentally switch to version 1.0
* Improve scripting support
* Fixes for a lot of incompatibilies with Animatron Editor



v0.9.1601 / Mon Oct 28 13:05:29 2013 +0200 / 746dd95fcce7e1a52d2bfb56b45639e4fe1e2b7c
=====================================================================================

* Remove a play screen (the one with pause button) in a player
* Restyle the player colors completely



v0.9.16 / Thu Oct 24 2013 11:52:03 -0400 / dae00d67a34914f8b282721066a8f2c67d06c207
===================================================================================

* Initial support to import code snippets from Animatron (currently only `onclick` handler for draft purposes).
* Include `scripting` and `collision` modules in `animatron` bundle
* Fixes for several errors in sandbox with importing sprites
* Fixes for resource manager errors happening when someone already waiting for the resource
* Update previously outdated collisions module to new changes regarding with pivot & registration point
* Move type-checking and value-checking into `anm.js`, global namespace
* `findByName` and `findById` methods in `anm` namespace



v0.9.1504 / Mon Oct 21 2013 16:13:05 -0400 / 9dc67f2b976c38c2395a2faa0f446cf8d35c466c
=====================================================================================

+ Support Volume tween in Audio module (no support in Builder)

* Fix positioning text when importing from Editor
* Change text baseline to bottom instead of alphabetic
* Support underlined text
* Calculate text dimensions for specific lines and support it in multiline



v0.9.1503 / Mon Oct 14 2013 19:16:44 -0400 / b55d293bdfc11b14c187198ea3277bb5ab1e267b
=====================================================================================

* Audio buffering and fixes for audio module by @alexeypegov